# landly

./: .env.example  404.html  INTEGRATION_GUIDE.md  README.md  build_apk.ps1  debug_db.py  index.html  main_dokuseite.py  mkdocs.yml  pyproject.toml  render.yaml  requirements-app.txt  requirements.txt  run_app.py  sitemap.xml  sync_report.json  sync_report.txt  sync_report_clean.json  test_query.py  today_commit_sync_report.json
.github/workflows/: ci.yml  deploy-docs.yml
code-examples/: index.html
dev/api/: index.html
dev/datenbankschema/: index.html
dev/konfiguration/: index.html
dev/logisches-modell/: index.html
dev/setup/: index.html
dev/technische-strategie/: index.html
dev/technische-uebersicht/: index.html
dev/testdaten/: index.html
dev/uml-klassen/: index.html
dev/uml-sequenz/: index.html
dev/uml-usecase/: index.html
docs/: code-examples.md  index.md  installation.md  steckbrief.md  technische-dokumentation.md
docs/dev/: api.md  datenbankschema.md  konfiguration.md  logisches-modell.md  setup.md  technische-strategie.md  technische-uebersicht.md  testdaten.md  uml-klassen.md  uml-sequenz.md  uml-usecase.md
docs/images/: README.md
docs/organisation/: weeklys-uebersicht.md
docs/organisation/weeklys/: kw01-lucas.md
docs/projekt/: moscow.md  projektidee.md  systemuebersicht.md
docs/styles/: extra.css
docs/user/: abholung.md  bestellung.md  einfuehrung.md  faq.md  mein-konto.md  produkte-suchen.md  registrierung-login.md
images/: index.html
installation/: index.html
kompilieren/backend/: README.md  pyproject.toml  render.yaml  render_app.py  requirements.txt  run_backend.py
kompilieren/backend/src/backend/: auth.py  bauernabfrage.py  crud.py  db.py  main.py  models.py  profilFunctions.py  warenkorbFunctions.py
kompilieren/frontend/: README.md  pyproject.toml  render.yaml  render_app.py  requirements.txt
kompilieren/frontend/src/: auth.py  config.py  content.py  farmer.py  hofseite.py  landingpage.py  logreg.py  main.py  maptest.py  navbar.py  products.py  requirements.txt  search.py  searchFunctions.py  sites.py  umsatzuebersicht.py  warenkorb.py
organisation/weeklys-uebersicht/: index.html
organisation/weeklys/kw01-lucas/: index.html
projekt/moscow/: index.html
projekt/projektidee/: index.html
projekt/systemuebersicht/: index.html
search/: search_index.json
src/: config.py  content.py  farmer.py  hofseite.py  landingpage.py  logreg.py  main.py  maptest.py  navbar.py  products.py  search.py  sites.py  test.py  test_web.py  testlog.py  umsatzuebersicht.py  warenkorb.py
src/backend/: auth.py  bauernabfrage.py  crud.py  db.py  db_test.py  logRegAuth.py  main.py  models.py  profilFunctions.py  schemas.py  searchFunctions.py  test_connection.py  warenkorbFunctions.py
steckbrief/: index.html
technische-dokumentation/: index.html
user/abholung/: index.html
user/bestellung/: index.html
user/einfuehrung/: index.html
user/faq/: index.html
user/mein-konto/: index.html
user/produkte-suchen/: index.html
user/registrierung-login/: index.html
