[project]
name = "landly"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    "fastapi>=0.128.0",
    "flet>=0.80.4",
    "flet-map>=0.80.4",
    "geoalchemy2>=0.18.1",
    "postgis>=1.0.4",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
    "psycopg[binary]>=3.3.2",
]

[dependency-groups]
dev = [
    "flet-desktop>=0.80.4",
    "flet-web>=0.80.4",
]

[tool.flet]
org = "com.mycompany"
product = "landly"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"
