[project]
name = "landly"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
# Nur App-Dependencies (für schlanke APK)
dependencies = [
    "flet>=0.80.4",
    "flet-map>=0.80.4",
    "requests>=2.32.5",
]

[dependency-groups]
# Backend-Dependencies (für lokale Entwicklung mit Backend)
backend = [
    "fastapi>=0.128.0",
    "geoalchemy2>=0.18.1",
    "postgis>=1.0.4",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
    "psycopg[binary]>=3.3.2",
    "psycopg2>=2.9.11",
]
# Dokumentation
docs = [
    "mkdocs>=1.6.1",
]
# Development
dev = [
    "flet-desktop>=0.80.4",
    "flet-web>=0.80.4",
]

[tool.flet]
org = "com.mycompany"
product = "landly"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"
