[project]
name = "landly"
version = "1.0.0"
description = "Landly – Regionale Bauernhöfe App"
requires-python = ">=3.10"

dependencies = [
    "flet>=0.80.4",
    "flet-map>=0.80.4",
    "httpx>=0.27.0",
    "oauthlib>=3.3.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "flet-desktop>=0.80.4",
    "flet-web>=0.80.4",
]

[tool.flet]
org          = "com.landly.app"
product      = "landly"
company      = "Landly"
copyright    = "Copyright (C) 2025 Landly"

[tool.flet.app]
path = "src"

# ── Android / APK ──────────────────────────────────────────────
[tool.flet.android]
min_sdk_version = 21
permissions = ["INTERNET", "ACCESS_NETWORK_STATE"]

# ── Web ────────────────────────────────────────────────────────
[tool.flet.web]
renderer = "canvaskit"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
